[APPBUG-5374] Display issue for the percentage burst in PDP pages [APPBUG-5378] IE browser - The products with sale burst are misaligned
git-svn-id: https://appdevsvn.nj01/appdev/FreshDirect/trunk@74052 842219ff-9341-0410-a943-573460bdd4de

--- a/projects/Media/docroot/assets/css/common/portraititem.css
+++ b/projects/Media/docroot/assets/css/common/portraititem.css
@@ -375,6 +375,7 @@
   padding-bottom: 4px;
   vertical-align: bottom;
   margin-top: 0px;
+  overflow: hidden; /* IE fix */
 }
 
 .portrait-item:hover .portrait-item-controls {
@@ -1290,9 +1291,9 @@ a.portrait-item-header-name:link {
 	text-align: center;
 	text-decoration: none;
 	color: #fff;
-	/*font-weight: bold;*/
 	font-family: TradeGothic, Trebuchet MS;
 	text-transform: uppercase;
+	font-size: 12px;
 }
 .cssBurst { /* 6-point, -(span rotation * # points) */
 	-webkit-transform: rotate(-135deg);
